--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
     <div class="container">
         <h1>Image Upload </h1>
         <h2>MILESTONE 3</h2>
+        <p>This has been a great process</p>
         <%= typeof msg != 'undefined' ? msg : '' %>
         <form action="/upload" method = "POST" enctype="multipart/form-data">
             <div class="file-field input-field">
